# TAF

./: .gitmodules  CMakeLists.txt  README.md
examples/: animtest.taf  football.md  football.mkv  test.taf  videotest.taf
include/: taf.h
papers/: effects.md  format.md  objectTypes.md
res/: OFL.txt  PD.txt
src/engine/: animator.cpp  audio.cpp  decoder.cpp  object.cpp  preload.cpp  scene.cpp  stream.cpp
src/gui/: imconfig.h  imgui-SFML.cpp  imgui-SFML.h  imgui-SFML_export.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_stdlib.cpp  imgui_stdlib.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/object/: audioTrack.cpp  motionSprite.cpp  partSys.cpp  rotoscope.cpp  sprite.cpp  text.cpp
src/run/: editItem.cpp  main.cpp  play.cpp
src/util/: list.cpp  scale.cpp  string.cpp  strings.cpp  time.cpp
